--- a/Finnish/main/Cit.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Cit.apk/res/values-fi-rFI/strings.xml
@@ -205,6 +205,8 @@ Pidä puhelinta kuin vastaisit puheluun, puhu mikrofoniin. Sinun pitäisi kuulla
   <string name="cit_display_check_summary">Vahvista, että vaadittu bmp-tiedosto on SD-kortilla. Vahvista, että värit toistetaan systemaattisesti koko näytöllä. Varmista, että näytöllä ei esiinny epäsäännöllisiä kirkkaita tai tummia pisteitä.</string>
   <string name="cit_display_check_title">Näyttö</string>
   <string name="cit_display_continue">Aloita testi koskettamalla näyttöä</string>
+  <string name="cit_display_test_end">Lopeta testi</string>
+  <string name="cit_display_test_next">Seuraava</string>
   <string name="cit_emergencycall_check_summary">Paina Soita 112 painiketta soittaaksesi 112 numeroon tarkistaaksesi, että 112 voidaan yhdistää.</string>
   <string name="cit_emergencycall_check_title">Hätäpuhelu</string>
   <string name="cit_exit_test_summary">Kun poistut, kaikki testeihin liittyvät tiedot poistetaan.</string>
