--- a/Finnish/main/DeskClock.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/DeskClock.apk/res/values-fi-rFI/strings.xml
@@ -4,6 +4,7 @@
   <string name="alarm_clock_more_setting">Lisäasetukset</string>
   <string name="channel_name_alarm">Hälytys</string>
   <string name="channel_name_timer">Ajastin</string>
+  <string name="check_theme_app_install">Varmista, että Teemat -sovellus on asennettuna laitteellesi.</string>
   <string name="edit_alarm">Muokkaa hälytystä</string>
   <string name="module_download_cancel">Ei kiitos</string>
   <string name="module_download_data_msg">Kellon täytyy yhdistää internetiin ladatakseen äänitiedostoja (20 Mt) ympäristöääniä ja älyhälytyksiä varten. Käytät tällä hetkellä mobiilidataa. Hyväksytkö?</string>
