--- a/Finnish/main/SecurityCoreAdd.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/SecurityCoreAdd.apk/res/values-fi-rFI/strings.xml
@@ -19,8 +19,10 @@ tämä ominaisuus lisätään Toiseen tilaan automaattisesti."</string>
   <string name="app_name">Tietoturvaytimen Komponentti</string>
   <string name="back">Takaisin</string>
   <string name="bind_device">Lisää laitteita</string>
+  <string name="button_input_password">Anna salasana</string>
   <string name="button_text_next_step">Seuraava</string>
   <string name="button_text_next_step_timer">Seuraava vaihe (%d)</string>
+  <string name="button_touch">Laita sormesi anturille</string>
   <string name="can_not_delete_when_calling">Tiloja ei voi poistaa puhelun aikana</string>
   <string name="can_not_switch_when_calling">Tilojen välillä ei voi siirtyä puhelun aikana</string>
   <string name="can_not_switch_when_green_kid_active">Lapsilukko rajoittaa vaihtamisen Toiseen tilaan</string>
@@ -85,6 +87,8 @@ jotta voit katsoa niitä milloin tahansa"</string>
   <string name="dialog_title">Huomio</string>
   <string name="dialog_title_service_error">Palvelinvirhe</string>
   <string name="dialog_undo_negative">Älä peruuta</string>
+  <string name="dialog_verify">Vahvista sormenjälkesi</string>
+  <string name="dialog_verify_fingerprint_retry">Sormenjälkeä ei voitu vahvistaa. Yritä uudelleen.</string>
   <string name="dir_switch_out_all_photos">Toisen tilan Galleria</string>
   <string name="disable">Poista käytöstä</string>
   <string name="disagree">En hyväksy</string>
