XML 8.12.18 Päivitettiin käännökset vastaamaan käännöspohjan versiota 8.12.18.

--- a/Finnish/main/MiuiGallery.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiGallery.apk/res/values-fi-rFI/strings.xml
@@ -19,7 +19,6 @@
   <string name="card_title_monthly_foods">Herkullinen</string>
   <string name="card_title_monthly_pets">Kasvatassut</string>
   <string name="card_title_party">Juhlat</string>
-  <string name="card_title_past_week_end">Viime viikonloput</string>
   <string name="card_title_pastyear_activities">Viime vuoden tapahtumat</string>
   <string name="card_title_pastyear_party">Viime vuoden juhlat</string>
   <string name="card_title_pastyear_sports">Viime vuoden harjoitukset</string>
@@ -174,6 +173,8 @@
   <string name="alert_secret_album_message">Pyyhkäise alaspäin Albumit-välilehdellä nähdäksesi piilotetun albumin.</string>
   <string name="alert_secret_album_message_lower_case">  pyyhkäise alaspäin Albumeissa nähdäksesi</string>
   <string name="alert_secret_album_title">Kuinka näät piilotetun albumin</string>
+  <string name="alert_selection_description">AI merkitsee tähdellä parhaan kuvan samankaltaisista kuvista.</string>
+  <string name="alert_selection_title">AI:n valitsema</string>
   <string name="all_faces">Kuvat, joissa on tämä henkilö</string>
   <string name="all_items_synced">Kaikki albumit on varmuuskopioitu Mi Pilveen</string>
   <string name="all_video_album_display_name">Kaikki videot</string>
@@ -236,6 +237,7 @@
   <string name="backup_device_space_low_title">Tallennustilaa ei ole riittävästi</string>
   <string name="backup_dirty_num">Yhteensä: %s</string>
   <string name="backup_dirty_tip">Kuvia ja videoita ei varmuuskopioitu</string>
+  <string name="backup_file_over_size_desc">%1$s suurempia kuvia eikä %2$s suurempia videoita voida varmuuskopioida.</string>
   <string name="backup_immediately">Varmuuskopioi</string>
   <string name="backup_need_sync_desc">Jatka varmuuskopiointia napauttamalla</string>
   <string name="backup_need_sync_title">Varmuuskopiointi pysäytettiin</string>
@@ -732,10 +734,12 @@
   <string name="collage_poster_global_green_plant_text">MATKA</string>
   <string name="collage_poster_global_summer_flower_text">KESÄ</string>
   <string name="collage_poster_global_tea_text">TEEHETKI</string>
+  <string name="collage_ratio_text">Kuvasuhde</string>
   <string name="collage_rotate">Kierrä</string>
-  <string name="collage_select_image_range">Kollaasit voivat sisältää 1-4 kuvaa</string>
+  <string name="collage_select_image_range">Kollaasit voivat sisältää 1-6 kuvaa</string>
   <string name="collage_title_layout">Ulkoasu</string>
   <string name="collage_title_poster">Juliste</string>
+  <string name="collage_title_stitching">Elokuvarulla</string>
   <string name="collaps_people">Piilota</string>
   <string name="com.qzone_com.qzonex.module.operation.ui.QZonePublishMoodActivity">Qzone</string>
   <string name="com.sina.weibo_com.sina.weibo.composerinde.ComposerDispatchActivity">Weibo</string>
@@ -997,17 +1001,18 @@ on käytettävissä"</string>
   <string name="filter_master_rise">Nousu</string>
   <string name="filter_master_somber">Synkkä</string>
   <string name="filter_original">Ei mitään</string>
+  <string name="filter_people_bw">M&amp;V</string>
   <string name="filter_people_fairytale">Lapset</string>
-  <string name="filter_people_heart">Tunteet</string>
   <string name="filter_people_japanese">Tuore</string>
+  <string name="filter_people_lilt">Nuotti</string>
   <string name="filter_people_maze">Sokkelo</string>
-  <string name="filter_people_mint">Minttu</string>
   <string name="filter_people_movie">Elokuva</string>
   <string name="filter_people_nature">Luonnollinen</string>
   <string name="filter_people_pink">Punastu</string>
   <string name="filter_people_riddle">Arvoitus</string>
-  <string name="filter_people_roman">Romanttinen</string>
+  <string name="filter_people_sepia">Seepia</string>
   <string name="filter_people_story">Tarina</string>
+  <string name="filter_people_tea">Tee</string>
   <string name="filter_scene_city">Kapunki</string>
   <string name="filter_scene_df">Sumu</string>
   <string name="filter_scene_koizora">Rakkaus</string>
