--- a/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
@@ -61,7 +61,7 @@
      <string name="accessibility_desc_on">Käytössä.</string>
      <string name="accessibility_desc_quick_settings_edit">Pika-asetuksien editori.</string>
      <string name="accessibility_desc_settings">Asetukset</string>
-     <string name="accessibility_enter_lock_wallpaper">Avaa Musiikki -sovellus napauttamalla</string>
+     <string name="accessibility_enter_lock_wallpaper">Avaa Taustakuvan Karuselli napauttamalla</string>
      <string name="accessibility_ethernet_connected">Ethernet yhdistetty.</string>
      <string name="accessibility_ethernet_disconnected">Ethernet-yhteys katkaistu.</string>
      <string name="accessibility_fingerprint_dialog_app_icon">Sovelluskuvake</string>
@@ -71,7 +71,7 @@
      <string name="accessibility_gps_enabled">GPS otettu käyttöön.</string>
      <string name="accessibility_key">Mukautettu navigointipainike</string>
      <string name="accessibility_left_control_center_button">Pikakuvake</string>
-     <string name="accessibility_left_lock_screen_magazine_button">Musiikki</string>
+     <string name="accessibility_left_lock_screen_magazine_button">Taustakuvan Karuselli</string>
      <string name="accessibility_location_active">Sijaintipyynnöt ovat aktiivisia</string>
      <string name="accessibility_multi_user_switch_inactive">Nykyinen käyttäjä %s</string>
      <string name="accessibility_multi_user_switch_quick_contact">Näytä profiili</string>
@@ -423,11 +423,15 @@ prioriteetti"</string>
      <string name="keyguard_indication_charging_time_slowly">Ladataan hitaasti (%s kunnes täynnä)</string>
      <string name="keyguard_indication_trust_disabled">Laite pysyy lukittuna, kunnes manuaalisesti poistat laitteen lukituksen</string>
      <string name="keyguard_instructions_when_pattern_disabled">Paina Valikko-painiketta poistaaksesi lukituksen.</string>
-     <string name="keyguard_left_mi_wallet">Mi Wallet</string>
-     <string name="keyguard_left_remotecentral">Kalenteri</string>
-     <string name="keyguard_left_smarthome">Yhteystiedot</string>
+     <string name="keyguard_left_calculator">Laskin</string>
+     <string name="keyguard_left_calendar">Kalenteri</string>
+     <string name="keyguard_left_contacts">Yhteystiedot</string>
+     <string name="keyguard_left_music">Musiikki</string>
+     <string name="keyguard_left_notes">Muistiot</string>
+     <string name="keyguard_left_remotecentral">Mi Kaukosäädin</string>
+     <string name="keyguard_left_smarthome">Mi Home</string>
      <string name="keyguard_left_torch">Taskulamppu</string>
-     <string name="keyguard_left_view_lock_wallpaper">Musiikki</string>
+     <string name="keyguard_left_view_lock_wallpaper">Taustakuvan Karuselli</string>
      <string name="keyguard_low_battery">Yhdistä laturisi.</string>
      <string name="keyguard_missing_sim_instructions">Aseta SIM-kortti.</string>
      <string name="keyguard_missing_sim_instructions_long">SIM-kortti puuttuu tai sitä ei voi lukea. Aseta SIM-kortti.</string>
@@ -520,7 +524,7 @@ Yritä uudelleen %2$d sekunnin kuluttua."</string>
      <string name="lock_screen_date">"EEEE d. MMMM'ta'"</string>
      <string name="lock_screen_date_12">"EEEE d. MMMM'ta'"</string>
      <string name="lock_screen_magazine_default_content">Päivittäinen annos tuoreita kuvia</string>
-     <string name="lock_screen_magazine_default_title">Musiikki</string>
+     <string name="lock_screen_magazine_default_title">Taustakuvan Karuselli</string>
      <string name="lock_screen_magazine_global_button_text">Lisää</string>
      <string name="lock_screen_no_sim_card_emergency_only">Vain hätäpuhelut</string>
      <string name="lock_screen_no_sim_card_no_service">Ei palvelua</string>
@@ -632,7 +636,7 @@ Olet myös yhteydessä VPN-palvelimeen, joka voi valvoa verkon käyttöäsi."</s
      <string name="open_camera_hint_text">Avaa kamera pyyhkäisemällä vasemmalle</string>
      <string name="open_extreme_power_save_mode_title">Ota Äärimmäinen virransäästö käyttöön</string>
      <string name="open_lock_screen_magazine_hint_text">Pyyhkäise oikealle lisävalintoja varten</string>
-     <string name="open_remote_center_hint_text">Avaa Hallintakeskus pyyhkäisemällä oikealle</string>
+     <string name="open_remote_center_hint_text">Avaa pikakuvakkeet pyyhkäisemällä oikealle</string>
      <string name="other">Muu</string>
      <string name="overview">Yleiskatsaus</string>
      <string name="phone_hint">Avaa Puhelin -sovellus pyyhkäisemällä kuvakkeesta</string>
@@ -1297,7 +1301,7 @@ Jos otat datan uudelleen käyttöön, operaattorisi saattaa laskuttaa siitä."</
   <string name="dock_forced_resizable">Sovellus ei ehkä toimi jaetulla näytöllä.</string>
   <string name="dock_keyguard_locked_failed_to_dock_text">Näytön jakaminen ei ole tuettu Lukitusnäytöllä.</string>
   <string name="dock_non_resizeble_failed_to_dock_text">Sovellus ei tue jaetun näytön tilaa.</string>
-  <string name="download_lock_wallpaper">Lataa Musiikkia tuplanapauttamalla</string>
+  <string name="download_lock_wallpaper">Lataa Taustakuvan Karuselli tuplanapauttamalla</string>
   <string name="drive_mode_tip">Olet Ajotilassa</string>
   <string name="enable_adb">USB-vianetsintä</string>
   <string name="enable_adb_summary">Vianetsintätila USB-liitännän ollessa käytössä</string>
