--- a/Finnish/main/SecurityCenter.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/SecurityCenter.apk/res/values-fi-rFI/strings.xml
@@ -288,6 +288,10 @@ Et menetä mitään sovellustietoja."</string>
   <string name="applock_close_dialog_summary">Kaikki piilotetut sovellukset tulee näkyville, niiden Aloitusnäytön pikakuvakkeet palautetaan ja Sovelluslukon salasanasi poistetaan. Poistetaanko Sovelluslukko käytöstä?</string>
   <string name="applock_close_dialog_title">Poistetaanko Sovelluslukko käytöstä?</string>
   <string name="applock_exit_account_info">Tili poistetaan automaattisesti, kun kirjaudut ulos</string>
+  <string name="applock_face_unlock_summary">Avaa sovelluksia käyttäen kasvojentunnistusta</string>
+  <string name="applock_face_unlock_title">Kasvojentunnistus</string>
+  <string name="applock_function_base_settings">Sovelluslukko</string>
+  <string name="applock_function_pwd_settings">Salasana</string>
   <string name="applock_header_text_less_than_half">Liian pieni. Vedä hieman kauemmaksi.</string>
   <string name="applock_login_and_add_account">Kirjaudu sisään &amp; lisää</string>
   <string name="applock_not_add_account">Ei nyt</string>
@@ -795,20 +799,28 @@ Se lisätään poikkeuksiin, mutta jo ennestään estetyt kohteet ei ilmesty puh
   <string name="exo_track_unknown">Tuntematon</string>
   <string name="extreme_power_save_mode_card_summary">Ota Äärimmäinen tila käyttöön säästääksesi virtaa, kun akku on vähissä.</string>
   <string name="extreme_power_save_mode_title">Äärimmäinen virransäästö</string>
-  <string name="fast_open">速抢模式</string>
-  <string name="fast_open_dialog_message">开启速抢模式后，当您收到红包时，系统将自动打开抢红包页面，抢红包更快更方便。</string>
-  <string name="fast_open_dialog_message_summary">注意：建议关闭导航类、视频类、游戏类应用的速抢模式，以免影响应用的正常操作。手机锁屏状态下不会进行红包速抢。</string>
-  <string name="fast_open_dialog_ok">开启</string>
-  <string name="fast_open_list_not_open_title">禁止在%s个应用中速抢</string>
-  <string name="fast_open_list_open_title">允许在%s个应用中速抢</string>
-  <string name="fast_open_noti_summary">%s给你发来一个红包</string>
-  <string name="fast_open_summary">开启速抢模式后，收到红包新消息将打断当前使用应用切换到抢红包窗口。</string>
+  <string name="face_unlock_be_on_the_screen">Pidä laitetta kasvojesi edessä</string>
+  <string name="face_unlock_check_failed">Sinua ei voitu tunnistaa</string>
+  <string name="face_unlock_face_auth_failed_title">Kasvojen tietoja ei voitu vahvistaa. Vaihdetaan toiseen lukituksenpoistotyyliin…</string>
+  <string name="face_unlock_face_start_title">Vahvistetaan kasvojen tietoja…</string>
+  <string name="face_unlock_finger_or_password_switch">Avaa lukitus käyttämällä sormenjälkeäsi tai antamalla salasana.</string>
+  <string name="face_unlock_guide_confirm">Käytä Kasvojentunnistusta</string>
+  <string name="face_unlock_guide_dialog_summary">Voit käyttää kasvojen tietoja avataksesi laitteesi lukituksen. Otetaanko Kasvojentunnistus käyttöön?</string>
+  <string name="face_unlock_not_found">Sinua ei voitu tunnistaa</string>
+  <string name="face_unlock_open_eye">Avaa silmiäsi hieman leveämmäksi</string>
+  <string name="face_unlock_reveal_eye">Tee silmäsi näkyväksi</string>
+  <string name="face_unlock_reveal_mouth">Tee huulesi näkyväksi</string>
+  <string name="face_unlock_toast_verity_failed">Kasvojen tietoja ei voitu vahvistaa. Siirry Sovelluslukon asetuksiin ja yritä vahvistaa kasvojesi tiedot siellä uudelleen.</string>
+  <string name="face_unlock_verity_dialog_summary">Vahvista kasvojen tiedot</string>
+  <string name="face_unlock_verity_dialog_title_failed">Sinua ei voitu tunnistaa</string>
+  <string name="face_unlock_verity_dialog_title_succeed">Vahvistettiin onnistuneesti</string>
   <string name="finger_remind_message">Lisää sormenjälkesi ensin. Avaa Asetukset napauttamalla.</string>
   <string name="fingerprint_identify_msg">Ota sormenjäljellä avaaminen käyttöön</string>
   <string name="fingerprint_not_identified_msg">Sormenjäljen luku epäonnistui. Syötä salasanasi.</string>
   <string name="fingerprint_not_remind">Älä kysy uudelleen</string>
   <string name="fingerprint_remind_dialog_title">Sormenjäljellä avaaminen</string>
   <string name="fingerprint_to_lock">Avaa lukitus sormenjäljellä</string>
+  <string name="fingerprint_to_lock_summary">Avaa sovelluksia sormenjäljelläsi</string>
   <string name="fingerprint_verify_failed">Sormenjäljen todennus epäonnistui</string>
   <string name="fingerprint_verify_succeed">Sormenjälki todennettu</string>
   <string name="fingerprint_verify_try_agin">Sormenjäljen skannaus epäonnistui, yritä uudelleen</string>
@@ -2456,12 +2468,7 @@ Lisää saldoa napauttamalla."</string>
   <string name="try_game">Kokeile</string>
   <string name="try_recommended_function">Suojaa laitteesi käyttämällä uusia Tietoturvatoimintoja</string>
   <string name="two_address_choose_hint">%1$s ja %2$s</string>
-  <string name="txv_dnd_end_time_title">结束时间</string>
   <string name="txv_dnd_start_time">0:00</string>
-  <string name="txv_dnd_start_time_title">起始时间</string>
-  <string name="txv_dnd_type_demo">仅屏蔽声音</string>
-  <string name="txv_dnd_type_title">勿扰方式</string>
-  <string name="txv_lucky_money_group_text">仅提醒群红包</string>
   <string name="unable_connect_internet">Ei internet-yhteyttä</string>
   <string name="uninstall_app_dialog_msg">Poistaminen poistaa myös sovellustiedot.</string>
   <string name="uninstall_app_dialog_title">Poistetaanko nyt?</string>
@@ -2471,6 +2478,7 @@ Lisää saldoa napauttamalla."</string>
   <string name="uninstall_danagerous_msg">\"%s\" voi vahingoittaa laitettasi, alentaa sen suorituskykyä tai aiheuttaa uudelleenkäynnistyksiä.</string>
   <string name="uninstall_danagerous_title">Poista haitallisia sovelluksia</string>
   <string name="unlike">Ei kiitos</string>
+  <string name="unlock_failed">Sisäinen virhe</string>
   <string name="unlock_pattern">Kuvio</string>
   <string name="unlock_pattern_to_bind_fingerprint">Syötä salasana aktivoidaksesi sormenjälki</string>
   <string name="unlock_set_unlock_password_summary">Yhdistä erilaisia merkkejä</string>
@@ -2494,8 +2502,8 @@ Lisää saldoa napauttamalla."</string>
   <string name="usage_type_video">Video</string>
   <string name="usage_type_wake_lock">Pidä hereillä</string>
   <string name="usage_type_wifi_running">Wi-Fi käynnissä</string>
-  <string name="usb_adb_input_apply_step_1">"This might lead to leaks and loss of private information. We don't recommend doing this unless you're a developer."</string>
-  <string name="usb_adb_input_apply_step_2">Developers can use special software to imitate gestures, change settings, and grant permissions via USB.</string>
+  <string name="usb_adb_input_apply_step_1">Tämä voi johtaa vuotoihin ja yksityisten tietojen menettämiseen. Emme suosittele tekemään tätä, ellet ole kehittäjä.</string>
+  <string name="usb_adb_input_apply_step_2">Kehittäjät voivat käyttää erikoista ohjelmaa imitoimaan eleitä, muuttamaan asetuksia ja sallimaan käyttöoikeuksia USB:n kautta.</string>
   <string name="usb_adb_input_apply_step_3">Sallitaanko nyt?</string>
   <string name="usb_install_desc">Asennetaanko tämä sovellus USB:n kautta?</string>
   <string name="usbsharenet_exception_summary">Internetiin ei saada yhteyttä jaetulla USB-yhteydellä. Tarkista laitteesi USB-yhteys ja käynnistä Mi PC Suite uudelleen.</string>
@@ -2511,10 +2519,7 @@ Lisää saldoa napauttamalla."</string>
   <string name="virus_wait_network_dialog_message">Puhelimesi ei ole nyt yhteydessä Wi-Fi-verkkoon. Käytetäänkö mobiilitiedonsiirtoa?</string>
   <string name="voltage_symbol">V</string>
   <string name="wakepath_confirm_start_activity">Sallitaanko %1$s avata %2$s?</string>
-  <string name="warn_function_no_work">来红包时无法正常提醒？</string>
-  <string name="weChat_not_found">您的应用版本过低或者未安装</string>
   <string name="website">Verkkosivu</string>
-  <string name="wechat_lucky_warning">微信红包</string>
   <string name="whitelist_prefix_add_hint">Lisää kaikki etuliitteellä olevat numerot poikkeuksiin</string>
   <string name="wifi_exception_summary">Testaa saatavilla olevat Wi-Fi verkot</string>
   <string name="wifi_exception_title">Testaa Wi-Fi verkko</string>
@@ -2538,5 +2543,4 @@ Lisää saldoa napauttamalla."</string>
   <string name="xunyou_pay_webview">Xunyou palvelut</string>
   <string name="xunyou_server_expired">Istunto vanhentui.</string>
   <string name="yuan">CNY</string>
-  <string name="zhifubao_not_found">您的应用版本过低或者未安装</string>
 </resources>
